payment-microservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice
  labels:
    app: payment-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: metrics
    protocol: TCP
  selector:
    app: payment-microservice
---
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice-headless
  labels:
    app: payment-microservice
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  selector:
    app: payment-microservice
